@@ -192,7 +192,6 @@
             <child>
               <object class="GtkToolButton" id="new_button">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">_New</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-new</property>
               </object>
@@ -204,7 +203,6 @@
             <child>
               <object class="GtkToolButton" id="open_button">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">_Open</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-open</property>
               </object>
@@ -216,7 +214,6 @@
             <child>
               <object class="GtkToolButton" id="save_button">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">_Save</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-save</property>
               </object>
@@ -226,9 +223,30 @@
               </packing>
             </child>
             <child>
+              <object class="GtkToolButton" id="undo_button">
+                <property name="visible">True</property>
+                <property name="use_underline">True</property>
+                <property name="stock_id">gtk-undo</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="homogeneous">True</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkToolButton" id="redo_button">
+                <property name="visible">True</property>
+                <property name="use_underline">True</property>
+                <property name="stock_id">gtk-redo</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="homogeneous">True</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkToolButton" id="pref_button">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">_Preferences</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-preferences</property>
               </object>
@@ -240,7 +258,6 @@
             <child>
               <object class="GtkToolButton" id="about_button">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">_About</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-about</property>
               </object>
@@ -252,7 +269,6 @@
             <child>
               <object class="GtkToolButton" id="help_button">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">_Help</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-help</property>
               </object>
@@ -264,7 +280,6 @@
             <child>
               <object class="GtkToolButton" id="quit_button">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">_Quit</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-quit</property>
               </object>
